@@ -1,30 +1,14 @@
-<h1>Listing events</h1>
+<% @title = 'Events' %>
+<h1><%= @title %></h1>
 
-<div class="frame">
-  <table>
-    <tr>
-      <th>Patient</th>
-      <th>Class name</th>
-      <th>Class</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
+<%= form_tag events_path, method: :get, remote: true, id: "events_search", style: "margin-bottom:-5px" do %>
+  Search <%= text_field_tag 'mrn', params[:mrn] %> <%#= information %>
+<% end %>
 
-  <% @events.each do |event| %>
-    <tr>
-      <td><%= event.patient_id %></td>
-      <td><%= event.class_name %></td>
-      <td><%= event.class_id %></td>
-      <td><%= link_to 'Show', event %></td>
-      <td><%= link_to 'Edit', edit_event_path(event) %></td>
-      <td><%= link_to 'Destroy', event, confirm: 'Are you sure?', method: :delete %></td>
-    </tr>
-  <% end %>
-  </table>
-</div>
+<div id="events"><div style="clear:both"></div><br /><center><%= image_tag "ajax-loader.gif" %></center></div>
 
-<br />
-
-<%= link_to 'New Event', new_event_path %>
-
+<%= javascript_tag do %>
+  $(function(){
+    $.get($("#events_search").attr("action"), $("#events_search").serialize(), null, "script");
+  });
+<% end %>
