@@ -1,0 +1,1 @@
+$("#events").html("<%= escape_javascript(render("events")) %>");
