@@ -1,4 +1,5 @@
-<h1>Listing patients</h1>
+<% @title = "Patients" %>
+<h1><%= @title %></h1>
 
 <div class="frame">
   <table>
