@@ -17,24 +17,38 @@ Contour.setup do |config|
   # config.header_title_image = ''
 
   # Enter the items you wish to see in the menu
-  # config.menu_items =
-  # [
-  #   {
-  #     name: 'Login', display: 'not_signed_in', path: 'new_user_session_path', position: 'right', condition: 'true',
-  #     links: [{ name: 'Sign Up', path: 'new_user_registration_path' }]
-  #   },
-  #   {
-  #     name: 'current_user.name', eval: true, display: 'signed_in', position: 'right', condition: 'true',
-  #     links: [{ html: '"<div class=\"small\" style=\"color:#bbb\">"+current_user.email+"</div>"', eval: true },
-  #             { name: 'Authentications', path: 'authentications_path', condition: 'not PROVIDERS.blank?' },
-  #             { html: "<br />" },
-  #             { name: 'Logout', path: 'destroy_user_session_path' }]
-  #   },
-  #   {
-  #     name: 'Home', display: 'always', path: 'root_path', position: 'left', condition: 'true', image: '', image_options: {},
-  #     links: []
-  #   }
-  # ]
+  config.menu_items =
+  [
+    {
+      name: 'Login', display: 'not_signed_in', path: 'new_user_session_path', position: 'right', condition: 'true',
+      links: [{ name: 'Sign Up', path: 'new_user_registration_path' }]
+    },
+    {
+      name: 'current_user.name', eval: true, display: 'signed_in', position: 'right', condition: 'true',
+      links: [{ html: '"<div class=\"small\" style=\"color:#bbb\">"+current_user.email+"</div>"', eval: true },
+              { name: 'Authentications', path: 'authentications_path', condition: 'not PROVIDERS.blank?' },
+              { html: "<br />" },
+              { name: 'Logout', path: 'destroy_user_session_path' }]
+    },
+    {
+      name: 'Home', display: 'always', path: 'root_path', position: 'left', condition: 'true', image: '', image_options: {},
+      links: []
+    },
+    {
+      name: 'Patients', display: 'signed_in', path: 'patients_path', position: 'left',
+      links: []
+    },
+    {
+      name: 'Prescreens', display: 'signed_in', path: 'prescreens_path', position: 'left',
+      links: []
+    },
+    {
+      name: 'Events', display: 'signed_in', path: 'events_path', position: 'left',
+      links: []
+    }
+
+
+  ]
 
   # Enter an address of a valid RSS Feed if you would like to see news on the sign in page.
   # config.news_feed = ''
