@@ -4,7 +4,11 @@ Screen::Application.routes.draw do
 
   resources :patients
 
-  resources :prescreens
+  resources :prescreens do
+    collection do
+      post :bulk
+    end
+  end
 
   devise_for :users, controllers: { registrations: 'contour/registrations', sessions: 'contour/sessions', passwords: 'contour/passwords' }, path_names: { sign_up: 'register', sign_in: 'login' }
 
